--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     ports:
       - "9090:8080"
       - "7077:7077"
+    restart: always
     volumes:
       - ./apps:/opt/spark-apps
       - ./data:/opt/spark-data
@@ -20,6 +21,7 @@ services:
     ports:
       - "9091:8080"
       - "7000:7000"
+    restart: always
     depends_on:
       - spark-master
     environment:
@@ -42,6 +44,7 @@ services:
     ports:
       - "9095:8080"
       - "7001:7000"
+    restart: always
     depends_on:
       - spark-master
     environment:
@@ -81,6 +84,7 @@ services:
     image: confluentinc/cp-zookeeper:7.3.2
     ports:
       - "2182:2181"
+    restart: always
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_SERVER_ID: 1
@@ -94,6 +98,7 @@ services:
     ports:
       - "9092:9092"
       - "29092:29092"
+    restart: always
     environment:
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka1:19092,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092,DOCKER://host.docker.internal:29092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
@@ -112,6 +117,7 @@ services:
     ports:
       - "9093:9093"
       - "29093:29093"
+    restart: always
     environment:
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka2:19093,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9093,DOCKER://host.docker.internal:29093
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
@@ -130,6 +136,7 @@ services:
     ports:
       - "9094:9094"
       - "29094:29094"
+    restart: always
     environment:
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka3:19094,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9094,DOCKER://host.docker.internal:29094
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
@@ -147,6 +154,7 @@ services:
     image: confluentinc/cp-kafka-connect:7.3.2
     ports:
       - "8083:8083"
+    restart: always
     environment:
       CONNECT_BOOTSTRAP_SERVERS: kafka1:19092,kafka2:19093,kafka3:19094
       CONNECT_REST_PORT: 8083
@@ -170,6 +178,7 @@ services:
     image: confluentinc/cp-schema-registry:7.3.2
     ports:
       - "8081:8081"
+    restart: always
     environment:
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: kafka1:19092,kafka2:19093,kafka3:19094
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
@@ -183,6 +192,7 @@ services:
     image: provectuslabs/kafka-ui:latest
     ports:
       - 8888:8080 # Changed to avoid port clash with akhq
+    restart: always
     depends_on:
       - kafka1
       - kafka2
@@ -196,6 +206,21 @@ services:
       KAFKA_CLUSTERS_0_KAFKACONNECT_0_NAME: connect
       KAFKA_CLUSTERS_0_KAFKACONNECT_0_ADDRESS: http://kafka-connect:8083
       DYNAMIC_CONFIG_ENABLED: "true"
+    networks:
+      - kafka-network
+      - airflow-kafka
+  postgres:
+    image: postgres:latest
+    container_name: postgres-db
+    ports:
+      - "5431:5432"
+    restart: always
+    volumes:
+      - ./db_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: root
+      POSTGRES_USER: root
+      POSTGRES_DB: dev
     networks:
       - kafka-network
       - airflow-kafka
